<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollIndicators="right"
    tools:context="mobile.unisinos.br.escalatime.CadastraJogadorActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/edJogador"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posicao" />

            <Spinner
                android:id="@+id/edPosicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/array_posicao" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar" />

                <Button
                    android:id="@+id/btCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar" />

                <Button
                    android:id="@+id/btDeletar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deletar"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>